--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ nav ul a:hover {
   left: 13% !important;
 }
 
+
 #index_search {
   display: none;
 }
@@ -178,12 +179,10 @@ nav i.material-icons {
   line-height: 70px;
   font-size: larger;
   background: rgb(255, 90, 90);
-  background: linear-gradient(
-    90deg,
-    rgba(255, 90, 90, 1) 0%,
-    rgba(253, 123, 29, 1) 44%,
-    rgba(252, 176, 69, 1) 100%
-  );
+  background: linear-gradient(90deg,
+      rgba(255, 90, 90, 1) 0%,
+      rgba(253, 123, 29, 1) 44%,
+      rgba(252, 176, 69, 1) 100%);
   color: rgb(255, 255, 255);
 }
 
@@ -249,6 +248,7 @@ nav i.material-icons {
 .dress-card {
   border: solid rgb(219, 219, 219) 1px;
   border-radius: 14px;
+  width: 80%;
   margin: 7% 1% 7% 1%;
 }
 
@@ -415,24 +415,23 @@ nav i.material-icons {
   background-color: #095f58 !important;
 }
 
-.input-field > label {
+.input-field>label {
   color: #fff;
 }
 
-input:not([type]):focus:not([readonly]) + label,
-input[type="text"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="password"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="email"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="url"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="time"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="date"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="datetime"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="datetime-local"]:not(.browser-default):focus:not([readonly])
-  + label,
-input[type="tel"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="number"]:not(.browser-default):focus:not([readonly]) + label,
-input[type="search"]:not(.browser-default):focus:not([readonly]) + label,
-textarea.materialize-textarea:focus:not([readonly]) + label {
+input:not([type]):focus:not([readonly])+label,
+input[type="text"]:not(.browser-default):focus:not([readonly])+label,
+input[type="password"]:not(.browser-default):focus:not([readonly])+label,
+input[type="email"]:not(.browser-default):focus:not([readonly])+label,
+input[type="url"]:not(.browser-default):focus:not([readonly])+label,
+input[type="time"]:not(.browser-default):focus:not([readonly])+label,
+input[type="date"]:not(.browser-default):focus:not([readonly])+label,
+input[type="datetime"]:not(.browser-default):focus:not([readonly])+label,
+input[type="datetime-local"]:not(.browser-default):focus:not([readonly])+label,
+input[type="tel"]:not(.browser-default):focus:not([readonly])+label,
+input[type="number"]:not(.browser-default):focus:not([readonly])+label,
+input[type="search"]:not(.browser-default):focus:not([readonly])+label,
+textarea.materialize-textarea:focus:not([readonly])+label {
   color: #c4c4c4;
 }
 
@@ -481,9 +480,42 @@ textarea.materialize-textarea:focus:not([readonly]) {
 }
 
 #search_button.btn-large {
-  margin: 10px;
-  /* border: solid #000 1px; */
+  padding-left: 10% !important;
+  padding-right: 10% !important;
+  height: 45px;
+  line-height: 45px !important;
+  border: solid #000 1px;
 }
+
+
+
+#search_button_mobile.btn-large {
+  width: 0px !important;
+}
+
+#back_button_mobile.btn-large {
+  width: 2% !important;
+}
+
+#back_button_mobile.btn-large i {
+  /* transform: translateX(-20px); */
+}
+
+
+#search_button_mobile.btn-large:hover,
+#back_button_mobile.btn-large:hover {
+  background-color: inherit;
+  border: none;
+}
+
+#search_form .row {
+  margin-bottom: 0px !important;
+}
+
+#back_button_mobile.btn-large {
+  width: 2% !important;
+}
+
 
 #search_button.btn-large:hover {
   background-color: #1f1f1f;
@@ -741,18 +773,18 @@ select {
   color: #242424;
 }
 
-[type="checkbox"] + span:not(.lever) {
+[type="checkbox"]+span:not(.lever) {
   font-size: 0.9rem;
 }
 
-[type="radio"]:not(:checked) + span,
-[type="radio"]:checked + span {
+[type="radio"]:not(:checked)+span,
+[type="radio"]:checked+span {
   font-size: 0.9rem;
   font-weight: 400;
   color: rgb(68, 68, 68);
 }
 
-[type="checkbox"].filled-in:checked + span:not(.lever):after {
+[type="checkbox"].filled-in:checked+span:not(.lever):after {
   top: 0;
   width: 20px;
   height: 20px;
@@ -807,16 +839,12 @@ select {
   left: 0;
   right: 0;
   padding: 20px;
-  background-image: -webkit-linear-gradient(
-    bottom,
-    rgba(0, 0, 0, 0.973) 0%,
-    transparent 100%
-  );
-  background-image: linear-gradient(
-    to top,
-    rgba(0, 0, 0, 0.973) 0%,
-    transparent 100%
-  );
+  background-image: -webkit-linear-gradient(bottom,
+      rgba(0, 0, 0, 0.973) 0%,
+      transparent 100%);
+  background-image: linear-gradient(to top,
+      rgba(0, 0, 0, 0.973) 0%,
+      transparent 100%);
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -902,8 +930,7 @@ span.htc__qua {
 
 /* FOOTER */
 
-footer {
-}
+footer {}
 
 .brand-logo-footer {
   font-size: 2.1rem !important;
