--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,10 @@ body {
 
 nav {
   height: 15vh !important;
+  position: relative;
+  z-index: 999;
   line-height: 15vh;
-  overflow: hidden;
+  /* overflow: hidden; */
   text-transform: uppercase;
 }
 
@@ -100,28 +102,39 @@ nav ul a:hover {
   display: none;
 }
 
-/* DROPDOWN */
+
 nav ul li {
   position: relative;
 }
 
-ul li ul.dropdown {
-  /* Set width of the dropdown */
-  background: #ffffff;
-  display: none;
+/* DROPDOWN */
+
+
+#hover li ul li {
+  height: 6vw;
+}
+
+#hover li ul {
   position: absolute;
-  z-index: 999;
-  left: 0;
+  visibility: hidden;
 }
 
-nav ul li ul a:hover {
-  background-color: rgb(255, 255, 255);
+#hover li ul li {
+  float: none;
 }
 
-ul li:hover ul.dropdown {
-  display: block;
-  /* Display the dropdown */
+#hover li ul li a {
+  width: auto;
+  background: #ffffff
 }
+
+#hover li ul li a:hover {
+  background: #e9e9e9
+}
+
+
+/* DROPDOWN - END */
+
 
 nav i,
 nav [class^="mdi-"],
