--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ p {
 body {
   font-family: "Montserrat", sans-serif;
   color: #000;
-  background-color: rgb(248, 248, 248);
+  /* background-color: rgb(248, 248, 248); */
 }
 
 /* NAV */
@@ -930,6 +930,7 @@ select {
 /* SUPER CATEGORIES */
 
 .snip1581 {
+  width: 100%;
   position: relative;
   display: inline-block;
   overflow: hidden;
@@ -1051,6 +1052,77 @@ span.htc__qua {
 }
 
 /* ADD TO CART - END */
+
+/* CHECKOUT */
+
+#address_details.title h1,
+#order_details.title h1,
+#payment_mode.title h1 {
+  color: #313131;
+  font-family: "Poppins", sans-serif;
+  font-size: 2em !important;
+  font-weight: 700;
+}
+
+
+#address_form input,
+#address_form textarea {
+  padding: 15px;
+  border: 1px solid #616161;
+  border-radius: 3px;
+  margin-bottom: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  font-family: montserrat;
+  color: #2C3E50;
+  font-size: 13px;
+}
+
+#address_form_submit input {
+  padding: 15px;
+  border: 1px solid #ff00f2;
+  background-color: #ff3df5;
+  border-radius: 3px;
+  margin-bottom: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  font-family: montserrat;
+  color: #ffffff;
+  font-size: 1.4em;
+}
+
+#address_form_submit input:hover {
+  cursor: pointer;
+  border: 1px solid #444;
+  background-color: #ffffff;
+  color: #444;
+}
+
+
+
+::-webkit-input-placeholder {
+  color: #2C3E50;
+  opacity: 1 !important;
+  /* for older chrome versions. may no longer apply. */
+}
+
+:-moz-placeholder {
+  /* Firefox 18- */
+  color: #2C3E50;
+  opacity: 1 !important;
+}
+
+::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #464646a6;
+  opacity: 1 !important;
+}
+
+:-ms-input-placeholder {
+  color: #FF0000;
+}
+
+/* CHECKOUT - END */
 
 /* FOOTER */
 
