Filter mobile dropdown updated

--- a/css/style.css
+++ b/css/style.css
@@ -976,6 +976,13 @@ select {
   padding: 5%;
 }
 
+@media screen and (max-width: 601px) {
+  #filter_body {
+    display: none;
+  }
+}
+
+
 #subcategory_body {
   display: block;
 }
