--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,400,400i,500,600,700,800");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap");
 
+html {
+  scroll-behavior: smooth
+}
+
 nav ul a,
 nav .brand-logo {
   color: #444;
@@ -1395,3 +1399,68 @@ footer.page-footer {
 }
 
 /* WISHLIST - END*/
+
+
+/* USER PROFILE */
+.user_nav {
+  padding: 30px 0 !important;
+  background-color: #fff;
+  border-right: solid #444 1px;
+}
+
+#profile .pfp {
+  width: 40%;
+  border-radius: 50%;
+}
+
+#profile ul li {
+  min-height: 40px;
+  line-height: 40px;
+}
+
+#profile li a {
+  cursor: pointer;
+  font-family: "Roboto", sans-serif;
+  padding: 1rem;
+  margin: 0;
+  font-size: 0.85em !important;
+  font-weight: 700;
+  color: #212121;
+}
+
+#profile li:hover {
+  background-color: rgb(250, 243, 243);
+}
+
+#profile .card {
+  border-radius: 15px;
+  width: 90%;
+  margin-left: 5%;
+  -webkit-box-shadow: 0px 0px 18px 0px rgba(49, 49, 49, 0.39);
+  box-shadow: 0px 0px 18px 0px rgba(49, 49, 49, 0.39);
+}
+
+
+#profile h3 {
+  color: #313131;
+  margin: 2.8rem 0 1.68rem 0;
+  font-family: "Poppins",
+    sans-serif;
+  font-size: 2em !important;
+  font-weight: 700;
+}
+
+#profile i {
+  margin-right: 20px;
+  font-size: 2em;
+  color: rgb(37, 37, 37);
+}
+
+#profile h5 {
+  font-family: "Roboto",
+    sans-serif;
+  font-size: 1em !important;
+  font-weight: 700;
+}
+
+/* USER PROFILE - END */
