--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -1974,7 +1974,7 @@ header .form-inline .search-form.close {
     font-size: 12px;
     font-weight: 400;
     padding: .75em 1.25em;
-    text-transform: uppercase
+    /* text-transform: uppercase */
 }
 
 .table-stats table th img,
@@ -1987,14 +1987,14 @@ header .form-inline .search-form.close {
 .table-stats table td .name {
     color: #343a40;
     font-size: 14px;
-    text-transform: capitalize
+    /* text-transform: capitalize */
 }
 
 .table-stats table td {
     color: #343a40;
     font-size: 14px;
     font-weight: 600;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
     vertical-align: middle
 }
 
