--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ p {
 /* CUSTOM EDIT FROM HERE */
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif ;
   color: #000;
   /* background-color: rgb(248, 248, 248); */
 }
@@ -1012,6 +1012,7 @@ select {
 #filters .title {
   color: #202020;
   font-family: "Poppins", sans-serif;
+  cursor: pointer;
   font-size: 1.3em !important;
   font-weight: 600;
 }
