--- a/css/style.css
+++ b/css/style.css
@@ -101,10 +101,11 @@ nav {
   font-weight: 600;
 }
 
+/* 
 .brand-logo {
   font-size: 2.1rem !important;
   font-family: "Oswald", sans-serif;
-}
+} */
 
 nav ul a:hover {
   background-color: rgba(255, 0, 0, 0.1);
